--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".groups"></activity>
-        <activity android:name=".createaccount" />
-        <activity android:name=".forgotpassword" />
-        <activity android:name=".freeness" />
-        <activity android:name=".login" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".groups" android:screenOrientation="portrait"></activity>
+        <activity android:name=".createaccount" android:screenOrientation="portrait"/>
+        <activity android:name=".forgotpassword" android:screenOrientation="portrait"/>
+        <activity android:name=".freeness" android:screenOrientation="portrait"/>
+        <activity android:name=".login" android:screenOrientation="portrait"/>
+        <activity android:name=".MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
