--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.meetngo">
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,12 +11,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".groups" android:screenOrientation="portrait"></activity>
-        <activity android:name=".createaccount" android:screenOrientation="portrait"/>
-        <activity android:name=".forgotpassword" android:screenOrientation="portrait"/>
-        <activity android:name=".freeness" android:screenOrientation="portrait"/>
-        <activity android:name=".login" android:screenOrientation="portrait"/>
-        <activity android:name=".MainActivity" android:screenOrientation="portrait">
+        <activity android:name=".settings"></activity>
+        <activity
+            android:name=".groups"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".createaccount"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".forgotpassword"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".freeness"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".login"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
