--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".delete_members"></activity>
+        <activity android:name=".status_page"></activity>
+        <activity android:name=".select_groups" />
+        <activity android:name=".delete_members" />
         <activity android:name=".create_group" />
         <activity android:name=".contacts_in_phone" />
         <activity android:name=".contacts_in_group" />
